
5.2a2 -> 5.2a3:
    - proyvind: add %__xz macro.
    - proyvind: rpmdb/tjfn: fix build breakage.
    - proyvind: lib/tgi: fix build breakage.
    - proyvind: rpmio/rpmz: merge with recent xz code to work with recent liblzma API
	changes.
    - proyvind: rpmio/lookup3: fix build breakage.
    - proyvind: rpmio/tpw: fix linking against librpm.
    - proyvind: rpmio/rpmtar: fix build breakage.
    - proyvind: rpmio/rpmcpio: fix build breakage.
    - proyvind: rpmio/tmacro: fix build breakage.
    - proyvind: perl: clean out rest of warnings.
    - proyvind: check return value for functions declared with attribute
	warn_unused_result. (some inspired by rpm.org)
    - proyvind: debugedit: perform some cleanups and pull in some from rpm.org
	as well while at it.
    - proyvind: move comparision of DISTEPOCH under NOTYET &
	RPM_VENDOR_MANDRIVA for now.
    - proyvind: only do DISTEPOCH comparision if RELEASE is equal.
    - proyvind: set DISTEPOCH to "" if not present in rpmVersionCompare().
    - proyvind: perl: "fix" segfault with RPM::PackageIterator.
    - proyvind: perl: add destructor function for RPM::PackageIterator.
    - proyvind: add new DistEpoch tag.
    - jbj: merge "support-wildcards-in-EVR-comparison" patch (OpenPKG).
    - jbj: invert the sense of a <-> b comparison, change sign of Mandriva override.
    - jbj: bury MDV file triggers under RPM_VENDOR_MANDRIVA.
    - jbj: use poptSaneFile() when available (popt-1.15).
    - jbj: use poptReadConfigFiles() when available (popt-1.15).
    - provyind: python: build with -fno-strict-aliasing.
    - proyvind: tevr: fix build issues.
    - proyvind: add RPMTAG_DISTTAG to optionalTags so that it may be used as
	%{disttag}.
    - rpm.org: add %{_default_patch_flags} macro for patch options
    - proyvind: add -Werror=format-security to gcc warning flags.
    - proyvind: xzdio: rename from lzdio.
    - proyvind: lzdio: set memlimit for decoding to 100MiB.